--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,10 +1,8 @@
 name: Refresh data
-
 on:
   schedule:
-    - cron: "*/30 * * * *"   # every 30 minutes
-  workflow_dispatch: {}       # allow manual runs
-
+    - cron: "17 7 * * *"   # daily 7:17 UTC
+  workflow_dispatch: {}
 permissions:
   contents: write
 
@@ -13,21 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Fetch & build data JSON
-        run: node scripts/fetch-data.js
+        with: { node-version: 20 }
+      - run: node scripts/fetch-cfbd-static.js
         env:
           CFBD_API_KEY: ${{ secrets.CFBD_API_KEY }}
-          FSQ_API_KEY:  ${{ secrets.FSQ_API_KEY }}
-
-      - name: Commit updated JSON
-        run: |
+      - run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add data/*.json || true
           git commit -m "chore(data): refresh" || echo "no changes"
-          git push 
+          git push
