--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,8 +1,10 @@
-name: Refresh data
+name: Refresh live data
+
 on:
   schedule:
-    - cron: "17 7 * * *"   # daily 7:17 UTC
+    - cron: "*/30 * * * *"   # every 30 minutes (be a good API citizen)
   workflow_dispatch: {}
+
 permissions:
   contents: write
 
@@ -11,14 +13,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
-        with: { node-version: 20 }
-      - run: node scripts/fetch-cfbd-static.js
+        with:
+          node-version: 20
+
+      - name: Fetch & build data JSON
+        run: node scripts/fetch-data.js
         env:
           CFBD_API_KEY: ${{ secrets.CFBD_API_KEY }}
-      - run: |
+
+      - name: Commit updated JSON
+        run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add data/*.json || true
-          git commit -m "chore(data): refresh" || echo "no changes"
+          git commit -m "chore(data): auto-refresh" || echo "no changes"
           git push
